Fix layout on mobile

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -4,12 +4,13 @@
 @import "lang";
 
 html {
-  background-image: linear-gradient(315deg, #EBE0FA, #EBF7F9);
-  height: 100%;
+  min-height: 100%;
 }
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  background-image: linear-gradient(315deg, #EBE0FA, #EBF7F9);
+  min-height: 100%;
 }
 
 .sino-logo {
